# amadeus-terminal

./: Dockerfile  amber-manifest.json5  pyproject.toml
.github/workflows/: test-and-publish.yml
src/: agent.py  config.py  controller.py  llm.py  protocol.py  server.py
tests/: green_sim.py  test_agent.py  test_agent_unit.py  test_config.py  test_controller.py  test_integration_green_sim.py  test_llm.py  test_manifest.py  test_protocol.py  test_server.py
